# Curriculearn-

./: .gitignore  AGENT1_COMPLETE.md  BRAIN_INTEGRATION_PLAN.md  CONNECT_FRONTEND.md  FRONTEND_QUICKSTART.md  INTEGRATION_GUIDE.md  INTEGRATION_STATUS.md  QUICKSTART.md  README.MD  STATUS.md  optimization_result.json  pyproject.toml  render.yaml  requirements.txt  run_full_optimization.py  start_server.py  test_adapter.py  test_claude_agents.py  test_integration.py  test_pipeline.py  test_visualizations.py
archived_old_code/: AGENT_OUTPUTS.md  COGNITIVE_LOAD_BUG_REPORT.md  agent_pipeline_walkthrough.py  simple_walkthrough.py  test_all_metrics.py  test_lesson.txt  test_sentence_transformer.py
archived_old_code/frontend/: package-lock.json  package.json  pnpm-lock.yaml
backend/: api_server.py  clean_lesson_content.py  json_to_html.py  json_to_slides.py
backend/neurocompiler/: __init__.py  cli.py  schemas.py  scoring.py
docs/: AGENT_INTERFACE_SPEC.md  FRONTEND_DESIGN.md  FRONTEND_IMPLEMENTATION.md  PARTNER_INTEGRATION_TODO.md  PRODUCT_SPEC.md  VISUALIZATION_AGENT.md
examples/: basic_pipeline.py  full_pipeline_demo.py  photosynthesis_demo.py  test_parser.py
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend-new/: README.md  package.json
frontend-new/app/: layout.tsx  page.tsx
frontend-next/: STRUCTURE.md  package-lock.json  package.json
frontend-next/app/: globals.css  page.tsx
src/: __init__.py
test_files/: README.md  bayes_theorem_lesson.html  photosynthesis_lesson.html  sample_lesson.txt
(+118 files in other folders)
