[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "curriculearn-neurocompiler"
version = "0.1.0"
description = "Model-agnostic curriculum optimization agents for Curriculearn."
readme = "README.MD"
requires-python = ">=3.10"
dependencies = ["pydantic>=2.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["backend"]

[tool.pytest.ini_options]
testpaths = ["backend/neurocompiler/tests"]
pythonpath = ["backend"]
